force-app/main/default/objects/Account/fields/Bags__c.field-meta.xml
<CustomField>
    <fullName>Bags__c</fullName>
    <defaultValue>false</defaultValue>
    <description>bags desc</description>
    <label>Bags</label>
    <type>Checkbox</type>
</CustomField>