force-app/main/default/objects/Account/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo Checkbox</description>
    <inlineHelpText>ddd</inlineHelpText>
    <label>Demo</label>
    <type>Checkbox</type>
</CustomField>