force-app/main/default/objects/Account/validationRules/cant_close.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_close</fullName>
    <active>true</active>
    <errorConditionFormula>Bags__c = TRUE</errorConditionFormula>
    <errorMessage>fuck up</errorMessage>
</ValidationRule>